--- a/Motaleb/code/lstm_bangla_text_generation.ipynb
+++ b/Motaleb/code/lstm_bangla_text_generation.ipynb
@@ -28,11 +28,11 @@
       "metadata": {
         "id": "SYDxx5Pp8DDg",
         "colab_type": "code",
+        "outputId": "904dbe1c-0129-496b-aee8-d9e413f8992b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "b3a7d988-cad3-4801-92ae-0a401afdf71d"
+          "height": 72
+        }
       },
       "source": [
         "import sys\n",
@@ -55,15 +55,26 @@
         "n_chars = len(raw_text)\n",
         "n_vocab = len(chars)\n",
         "print (\"Total Characters: \", n_chars)\n",
-        "print (\"Total Vocab: \", n_vocab)"
+        "print (\"Total Vocab: \", n_vocab)\n",
+        "seq_length = 100\n",
+        "dataX = []\n",
+        "dataY = []\n",
+        "for i in range(0, n_chars - seq_length, 1):\n",
+        "\tseq_in = raw_text[i:i + seq_length]\n",
+        "\tseq_out = raw_text[i + seq_length]\n",
+        "\tdataX.append([char_to_int[char] for char in seq_in])\n",
+        "\tdataY.append(char_to_int[seq_out])\n",
+        "n_patterns = len(dataX)\n",
+        "print (\"Total Patterns: \", n_patterns)\n"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Total Characters:  1571\n",
-            "Total Vocab:  61\n"
+            "Total Vocab:  61\n",
+            "Total Patterns:  1471\n"
           ],
           "name": "stdout"
         }
@@ -74,17 +85,17 @@
       "metadata": {
         "id": "3G8x8gju8HMq",
         "colab_type": "code",
+        "outputId": "0e56840b-37fc-4308-8216-ef296a793b8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
-        },
-        "outputId": "e00d6375-b1ad-4cb9-ebe2-4522782f02bd"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
