Implemented one hot encoding

--- a/Motaleb/code/lstm_bangla_text_generation.ipynb
+++ b/Motaleb/code/lstm_bangla_text_generation.ipynb
@@ -64,7 +64,13 @@
         "\tdataX.append([char_to_int[char] for char in seq_in])\n",
         "\tdataY.append(char_to_int[seq_out])\n",
         "n_patterns = len(dataX)\n",
-        "print (\"Total Patterns: \", n_patterns)\n"
+        "print (\"Total Patterns: \", n_patterns)\n",
+        "# reshape X to be [samples, time steps, features]\n",
+        "X = numpy.reshape(dataX, (n_patterns, seq_length, 1))\n",
+        "# normalize\n",
+        "X = X / float(n_vocab)\n",
+        "# one hot encode the output variable\n",
+        "y = np_utils.to_categorical(dataY)\n"
       ],
       "execution_count": 0,
       "outputs": [
