--- a/Motaleb/code/lstm_bangla_text_generation.ipynb
+++ b/Motaleb/code/lstm_bangla_text_generation.ipynb
@@ -70,7 +70,12 @@
         "# normalize\n",
         "X = X / float(n_vocab)\n",
         "# one hot encode the output variable\n",
-        "y = np_utils.to_categorical(dataY)\n"
+        "y = np_utils.to_categorical(dataY)\n",
+        "# define the LSTM model\n",
+        "model = Sequential()\n",
+        "model.add(LSTM(256, input_shape=(X.shape[1], X.shape[2])))\n",
+        "model.add(Dropout(0.2))\n",
+        "model.add(Dense(y.shape[1], activation='softmax'))\n"
       ],
       "execution_count": 0,
       "outputs": [
