--- a/Motaleb/code/lstm_bangla_text_generation.ipynb
+++ b/Motaleb/code/lstm_bangla_text_generation.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "SYDxx5Pp8DDg",
         "colab_type": "code",
-        "outputId": "904dbe1c-0129-496b-aee8-d9e413f8992b",
+        "outputId": "3787023d-ab7f-40cd-fc8d-79a6c323d95b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -75,9 +75,13 @@
         "model = Sequential()\n",
         "model.add(LSTM(256, input_shape=(X.shape[1], X.shape[2])))\n",
         "model.add(Dropout(0.2))\n",
-        "model.add(Dense(y.shape[1], activation='softmax'))\n"
+        "model.add(Dense(y.shape[1], activation='softmax'))\n",
+        "model.compile(loss='categorical_crossentropy', optimizer='adam')\n",
+        "filepath=\"/content/drive/My Drive/Machine Learning/Lstm/weights-improvement-{epoch:02d}-{loss:.4f}.hdf5\"\n",
+        "checkpoint = ModelCheckpoint(filepath, monitor='loss', verbose=1, save_best_only=True, mode='min')\n",
+        "callbacks_list = [checkpoint]\n"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
