fitted the model

--- a/Motaleb/code/lstm_bangla_text_generation.ipynb
+++ b/Motaleb/code/lstm_bangla_text_generation.ipynb
@@ -28,10 +28,10 @@
       "metadata": {
         "id": "SYDxx5Pp8DDg",
         "colab_type": "code",
-        "outputId": "3787023d-ab7f-40cd-fc8d-79a6c323d95b",
+        "outputId": "324c1f0d-f22d-4072-b91d-9024486ecb61",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
+          "height": 1000
         }
       },
       "source": [
@@ -79,16 +79,82 @@
         "model.compile(loss='categorical_crossentropy', optimizer='adam')\n",
         "filepath=\"/content/drive/My Drive/Machine Learning/Lstm/weights-improvement-{epoch:02d}-{loss:.4f}.hdf5\"\n",
         "checkpoint = ModelCheckpoint(filepath, monitor='loss', verbose=1, save_best_only=True, mode='min')\n",
-        "callbacks_list = [checkpoint]\n"
+        "callbacks_list = [checkpoint]\n",
+        "model.fit(X, y, epochs=20, batch_size=128, callbacks=callbacks_list)\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Total Characters:  1571\n",
             "Total Vocab:  61\n",
-            "Total Patterns:  1471\n"
+            "Total Patterns:  1471\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1020: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3005: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+            "\n",
+            "Epoch 1/20\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:190: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:197: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:207: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:216: The name tf.is_variable_initialized is deprecated. Please use tf.compat.v1.is_variable_initialized instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:223: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
+            "\n",
+            "1471/1471 [==============================] - 12s 8ms/step - loss: 3.8595\n",
+            "\n",
+            "Epoch 00001: loss improved from inf to 3.85949, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-01-3.8595.hdf5\n",
+            "Epoch 2/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4897\n",
+            "\n",
+            "Epoch 00002: loss improved from 3.85949 to 3.48972, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-02-3.4897.hdf5\n",
+            "Epoch 3/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4432\n",
+            "\n",
+            "Epoch 00003: loss improved from 3.48972 to 3.44324, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-03-3.4432.hdf5\n",
+            "Epoch 4/20\n",
+            "1471/1471 [==============================] - 11s 7ms/step - loss: 3.4387\n",
+            "\n",
+            "Epoch 00004: loss improved from 3.44324 to 3.43869, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-04-3.4387.hdf5\n",
+            "Epoch 5/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4322\n",
+            "\n",
+            "Epoch 00005: loss improved from 3.43869 to 3.43218, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-05-3.4322.hdf5\n",
+            "Epoch 6/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4314\n",
+            "\n",
+            "Epoch 00006: loss improved from 3.43218 to 3.43144, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-06-3.4314.hdf5\n",
+            "Epoch 7/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4275\n",
+            "\n",
+            "Epoch 00007: loss improved from 3.43144 to 3.42749, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-07-3.4275.hdf5\n",
+            "Epoch 8/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4280\n",
+            "\n",
+            "Epoch 00008: loss did not improve from 3.42749\n",
+            "Epoch 9/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4219\n",
+            "\n",
+            "Epoch 00009: loss improved from 3.42749 to 3.42185, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-09-3.4219.hdf5\n",
+            "Epoch 10/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4228\n",
+            "\n",
+            "Epoch 00010: loss did not improve from 3.42185\n",
+            "Epoch 11/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4232\n",
+            "\n",
+            "Epoch 00011: loss did not improve from 3.42185\n",
+            "Epoch 12/20\n",
+            "1280/1471 [=========================>....] - ETA: 1s - loss: 3.4105"
           ],
           "name": "stdout"
         }
