got the best result in 20th epoc

--- a/Motaleb/code/lstm_bangla_text_generation.ipynb
+++ b/Motaleb/code/lstm_bangla_text_generation.ipynb
@@ -82,7 +82,7 @@
         "callbacks_list = [checkpoint]\n",
         "model.fit(X, y, epochs=20, batch_size=128, callbacks=callbacks_list)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,9 +154,55 @@
             "\n",
             "Epoch 00011: loss did not improve from 3.42185\n",
             "Epoch 12/20\n",
-            "1280/1471 [=========================>....] - ETA: 1s - loss: 3.4105"
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4205\n",
+            "\n",
+            "Epoch 00012: loss improved from 3.42185 to 3.42045, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-12-3.4205.hdf5\n",
+            "Epoch 13/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4141\n",
+            "\n",
+            "Epoch 00013: loss improved from 3.42045 to 3.41407, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-13-3.4141.hdf5\n",
+            "Epoch 14/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4202\n",
+            "\n",
+            "Epoch 00014: loss did not improve from 3.41407\n",
+            "Epoch 15/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4214\n",
+            "\n",
+            "Epoch 00015: loss did not improve from 3.41407\n",
+            "Epoch 16/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4257\n",
+            "\n",
+            "Epoch 00016: loss did not improve from 3.41407\n",
+            "Epoch 17/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4220\n",
+            "\n",
+            "Epoch 00017: loss did not improve from 3.41407\n",
+            "Epoch 18/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4155\n",
+            "\n",
+            "Epoch 00018: loss did not improve from 3.41407\n",
+            "Epoch 19/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4160\n",
+            "\n",
+            "Epoch 00019: loss did not improve from 3.41407\n",
+            "Epoch 20/20\n",
+            "1471/1471 [==============================] - 10s 7ms/step - loss: 3.4133\n",
+            "\n",
+            "Epoch 00020: loss improved from 3.41407 to 3.41334, saving model to /content/drive/My Drive/Machine Learning/Lstm/weights-improvement-20-3.4133.hdf5\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f007e28c128>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
         }
       ]
     },
