Changed the sample file path

--- a/Motaleb/code/lstm_bangla_text_generation.ipynb
+++ b/Motaleb/code/lstm_bangla_text_generation.ipynb
@@ -44,7 +44,7 @@
         "from keras.callbacks import ModelCheckpoint\n",
         "from keras.utils import np_utils\n",
         "# load ascii text and covert to lowercase\n",
-        "filename = \"/content/drive/My Drive/Trash/sample.txt\"\n",
+        "filename = \"/content/drive/My Drive/Machine Learning/Lstm/sample.txt\"\n",
         "raw_text = open(filename, 'r', encoding='utf-8').read()\n",
         "# create mapping of unique chars to integers, and a reverse mapping\n",
         "chars = sorted(list(set(raw_text)))\n",
